--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "e2e": "cypress open"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.17",
+    "cypress": "^13.6.4",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^3.0.0"
